# job-agent

./: .env.example  .gitignore  SPEC.md  pyproject.toml
src/job_agent/: cli.py  config.py  db.py  models.py
src/job_agent/agent/: orchestrator.py
src/job_agent/apply/: base.py  greenhouse.py  lever.py
src/job_agent/discovery/: base.py  himalayas.py  hn_hiring.py  indeed.py  jobicy.py  remoteok.py  weworkremotely.py
src/job_agent/notify/: email.py
src/job_agent/outreach/: message.py
src/job_agent/resume/: tailor.py
src/job_agent/review/: gate.py
src/job_agent/score/: fit.py
